# Car-insurance---Competitors-price-reverse-engineering

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Docs/: earnix_competitors_summary.md  objective.md  system_blueprint.md
competitor_pricing_ai/: __init__.py  basket.py  cli.py  config.py  data.py  demand.py  features.py  governance.py  historical.py  metrics.py  models.py  monitoring.py  panel.py  pipeline.py  reporting.py  scoring.py  splits.py  tuning.py
configs/: config.example.yml  config.yml
scripts/: dashboard.py  generate_sample_data.py
tests/: test_basket.py  test_config.py  test_features.py  test_historical.py  test_metrics.py  test_models.py  test_monitoring.py  test_recency.py  test_splits.py
