[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-pricing-ai"
version = "0.1.0"
description = "Configurable competitor pricing intelligence system for car insurance pricing optimisation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
h2o = ["h2o>=3.44"]
catboost = ["catboost>=1.2"]
lightgbm = ["lightgbm>=4.0"]
tuning = ["optuna>=3.0"]
onnx = ["skl2onnx>=1.16", "onnx>=1.14"]
plots = ["matplotlib>=3.7", "shap>=0.44", "streamlit>=1.35", "plotly>=5.20"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
competitor-pricing-ai = "competitor_pricing_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["competitor_pricing_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
